# babyping

./: .gitignore  CHANGELOG.md  LICENSE  README.md  audio.py  babyping.py  events.py  prd.md  pyproject.toml  requirements.txt  web.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-04-babyping-mvp-design.md  2026-02-04-babyping-mvp-implementation.md  2026-02-04-v2-features-design.md  2026-02-04-v2-features-implementation.md  2026-02-05-web-ui-design.md  2026-02-06-audio-motion-alerts-design.md  2026-02-06-auth-design.md  2026-02-06-production-hardening-v3-design.md  2026-02-06-roi-web-selection-design.md  2026-02-06-v3-design.md  2026-02-07-rtsp-camera-support-design.md  2026-02-07-vision-llm-integration-design.md
tests/: test_audio.py  test_babyping.py  test_events.py  test_integration.py  test_web.py
