[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "babyping"
version = "1.0.0"
description = "Lightweight baby monitor with motion detection, macOS notifications, and a local web UI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
babyping = "babyping:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
